--- a/.gitignore
+++ b/.gitignore
@@ -73,11 +73,11 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-# .env is intentionally NOT ignored
-# .env.development.local
-# .env.test.local
-# .env.production.local
-# .env.local
+.env is intentionally NOT ignored
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
