--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,27 @@
 steps:
   # Build the container image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA', '.']
-  
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA", "."]
+
   # Push the container image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA']
-  
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["push", "gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA"]
+
   # Deploy container image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
     args:
-      - 'run'
-      - 'deploy'
-      - 'neuro-estimator'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA'
-      - '--region'
-      - 'us-west1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
+      - "run"
+      - "deploy"
+      - "neuro-estimator"
+      - "--image"
+      - "gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA"
+      - "--region"
+      - "us-west1"
+      - "--platform"
+      - "managed"
+      - "--allow-unauthenticated"
+      - "--timeout=600s"
 
 images:
-  - 'gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA'
+  - "gcr.io/$PROJECT_ID/neuro-estimator:$COMMIT_SHA"
