--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fast-xml-parser": "^5.2.3",
     "jsonrepair": "^3.2.0"
   },
   "devDependencies": {
