--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "jsonrepair": "^3.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
+    "globals": "^16.2.0",
     "nodemon": "^3.0.1"
   }
 }
